--- a/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/chittin.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/chittin.yml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
+# SPDX-FileCopyrightText: 2025 John Willis <143434770+CerberusWolfie@users.noreply.github.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 # Spoken by Chitinids.
 - type: language
   id: Chittin
@@ -9,8 +15,9 @@
     !type:SyllableObfuscation
     minSyllables: 1 # Replacements are really short
     maxSyllables: 2
+    #RADIUM REPLACEMENTS
     replacement:
-    - click
-    - clack
-    - buzz
-    - bizz
+    - клик
+    - клак
+    - бузз
+    - бизз
