--- a/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/diona.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/diona.yml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
+# SPDX-FileCopyrightText: 2025 John Willis <143434770+CerberusWolfie@users.noreply.github.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 # Spoken by dionas.
 # TODO: Replace this with a much better language.
 - type: language
@@ -10,9 +16,10 @@
     !type:SyllableObfuscation
     minSyllables: 1
     maxSyllables: 5
+    #RADIUM REPLACEMENTS
     replacement:
-    - hs
-    - zt
-    - kr
-    - st
-    - sh
+    - хс
+    - зт
+    - кр
+    - ст
+    - сш
