--- a/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/marish.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/marish.yml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
+# SPDX-FileCopyrightText: 2025 John Willis <143434770+CerberusWolfie@users.noreply.github.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 # Spoken by Shadowkins.
 - type: language
   id: Marish
@@ -12,27 +18,28 @@
     !type:SyllableObfuscation
     minSyllables: 2
     maxSyllables: 5
+    #RADIUM REPLACEMENTS
     replacement:
-    - mar
-    - mwrrr
-    - maaAr
-    - aarrr
-    - wrurrl
-    - mmar
-    - mwar
-    - mlar
-    - mlwar
-    - mwaarr
-    - mAaAr
-    - lmwar
-    - wlurrl
-    - wlmwar
-    - arrmaw
-    - mwAlwar
-    - wrlurll
-    - wlarrul
-    - wlAmur
-    - AlwuRm
-    - mrrrAw
-    - wurlMur
-    - uuRlmmr
+    - мар
+    - мррр
+    - мааАр
+    - ааррр
+    - вруррл
+    - ммар
+    - мвар
+    - млар
+    - млвар
+    - мвар
+    - мАаАр
+    - лмвар
+    - вруррл
+    - влмвар
+    - аррмав
+    - мвАлвар
+    - врурлл
+    - враррул
+    - влАмур
+    - Алвурм
+    - мррАв
+    - вурлМур
+    - ууРлммр
