--- a/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/skeleton.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/skeleton.yml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
+# SPDX-FileCopyrightText: 2025 John Willis <143434770+CerberusWolfie@users.noreply.github.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 - type: language
   id: Calcic
   isVisibleLanguage: true
@@ -9,51 +15,51 @@
     minSyllables: 1
     maxSyllables: 4
     replacement:
-      - k
-      - ck
-      - ack
-      - ick
-      - cl
-      - tk
-      - sk
-      - isk
-      - tak
-      - kl
-      - hs
-      - ss
-      - ks
-      - lk
-      - dk
-      - gk
-      - ka
-      - ska
-      - la
-      - pk
-      - wk
-      - ak
-      - ik
-      - ip
-      - ski
-      - bk
-      - kb
-      - ta
-      - is
-      - it
-      - li
-      - di
-      - ds
-      - ya
-      - sck
-      - crk
-      - hs
-      - ws
-      - mk
+      - к
+      - чк
+      - ачк
+      - ичк
+      - кл
+      - тк
+      - ск
+      - иск
+      - так
+      - кл
+      - хс
+      - сс
+      - кс
+      - лк
+      - дк
+      - гк
+      - ка
+      - ска
+      - ла
+      - пк
+      - вк
+      - ак
+      - ик
+      - ип
+      - ски
+      - бк
+      - кб
+      - та
+      - ис
+      - ит
+      - ли
+      - ди
+      - дс
+      - йа
+      - сче
+      - чрк
+      - хс
+      - вс
+      - мк
       - aaa
-      - skraa
-      - skee
-      - hss
-      - raa
-      - klk
-      - tk
-      - stk
-      - clk
+      - скрра
+      - скии
+      - хсс
+      - раа
+      - клк
+      - тк
+      - стк
+      - ктл
